# HiddenInk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  REORGANISATION_COMPLETE.md  build.ps1  build.sh  final  image_analysis.hpp  main.cpp  main.txt  stegano.hpp  stegano_image.hpp  stegano_imageinimage.hpp  stegano_text.hpp  test_cli_vincent
GUI/: GUI.pro  histogramwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Histogramme-commande-chiffrage/: main.cpp  text.txt
Histogramme-commande-chiffrage/histogramme/: histoGraph.cpp  histoTab.cpp
Histogramme-commande-chiffrage/steganographie/BMP/: bmp_Recuperation.cpp  bmp_convert.cpp
Histogramme-commande-chiffrage/steganographie/encrypt/: encrypt.cpp
Histogramme-commande-chiffrage/steganographie/utils/: utils_bin.cpp
docs/: DMP  EXAMPLES.md  GUIDE_UTILISATION.md  README.md  fonction_menu LEGACY
examples/: test_message.txt
examples/img/: texte.txt
fonctions_main/: fonctions_main.cpp
gui/: CMakeLists.txt  HiddenInk_GUI.pro  main_gui.cpp  mainwindow.cpp  mainwindow.h
include/analysis/: image_analysis.hpp
include/stegano/: stegano_imageinimage.hpp  stegano_text.hpp
interfaces/cli/interactif/: fonction_menu_interactif.cpp  fonction_menu_interactif.h
interfaces/cli/non_interactif/: fonction_menu_non_interactif.cpp  fonction_menu_non_interactif.h  fonctions_main.cpp
main_simplifie_toutes_interfaces_fonctionnelles/: main.cpp  text.txt
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/BMP/: bmp_Recuperation.cpp  bmp_convert.cpp
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/PNG/: fonction_menu.cpp  fonction_menu.h
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/encrypt/: encrypt.cpp  encrypt.h
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/fonctions_main/: fonctions_main.cpp  fonctions_main.h
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/utils/: utils_bin.cpp  utils_bin.h
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/utils/analysis/: image_analysis.hpp
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/utils/histogramme/: histogram.cpp  histogram.h
main_simplifie_toutes_interfaces_fonctionnelles/steganographie/utils/stegano/: stegano_text.hpp
src/: main.cpp  stb_impl.cpp
stenograpgie/: bmp_steg.cpp
stenograpgie/BMP/: bmp_Recuperation.cpp  bmp_Recuperation.h  bmp_convert.cpp  bmp_steg.cpp  bmp_steg.h
stenograpgie/Doc/: bits
stenograpgie/utils/: utils_bin.cpp  utils_bin.h
stenographie/: main_helpers.hpp
stenographie/BMP/: bmp_Recuperation.cpp  bmp_convert.cpp  bmp_convert.h  bmp_extract.cpp  bmp_extract.h  bmp_hide.cpp  bmp_hide.h  bmp_recuperation.cpp  bmp_recuperation.h
stenographie/PNG/: fonction_menu.cpp  png_extract.cpp  png_extract.h  png_hide_image.cpp  png_hide_image.h  png_hide_text.cpp  png_hide_text.h
stenographie/encrypt/: encrypt.h
stenographie/utils/: main_helpers.hpp  utils_bin.cpp  utils_bin.h
stenographie/utils/analysis/: image_analysis.hpp
stenographie/utils/encrypt/: encrypt.cpp  encrypt.h
stenographie/utils/histogramme/: histoGraph.cpp  histoTab.cpp  histogram.cpp  histogram.h
stenographie/utils/stegano/: stegano_imageinimage.hpp  stegano_text.hpp
